<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/horizontal_recycle_view"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:scrollbars="horizontal" />

            <android.support.v4.view.ViewPager
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@+id/horizontal_recycle_view"
                android:layout_marginTop="4dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

            <LinearLayout
                android:id="@+id/text_view_group_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/container"
                android:layout_marginTop="4dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="15dp">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/text_view_one"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/text_view_two"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/text_view_three"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/recycler_item_name_layout"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@+id/text_view_group_linear_layout"
                android:layout_margin="4dp"
                android:background="@color/white"
                android:padding="15dp">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/recycler_item_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/instruction_one"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/background_color_buttons_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/recycler_item_name_layout"
                android:background="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/red_button"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@color/buttonBackground"
                        android:text="@string/red"
                        android:textColor="@color/white" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/blue_button"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@color/buttonBackground"
                        android:text="@string/blue"
                        android:textColor="@color/white" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/green_button"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@color/buttonBackground"
                        android:text="@string/green"
                        android:textColor="@color/white" />
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
